--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +7,8 @@ body {
   @apply bg-stone-900 text-white;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: 'IM Fell English SC', serif;
 }
